# bootcamp-animal-test

./: main.py  pyproject.toml
Data/: mammal-sleep-data.tsv  mammal-sleep-description.md
config/mpl/: fontlist-v330.json
