[tool.poetry]
name = "parallelcrushingratio"
version = "0.1.0"
description = ""
authors = ["James Hawley <jamesrichardhawley@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.1"
plotnine = "^0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
